--- a/publications.html
+++ b/publications.html
@@ -203,7 +203,7 @@ layout: default
 
 <p style="font-size:13.4px; line-height:155%"><strong>Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method</strong></p>
 
-<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Hamid Reza Rabiee, Christian Gagné; In <b>3D Computer Vision IEEE Conference</b>, 2015 (acceptance rate for <b>oral</b> 15%)  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Hamid Reza Rabiee, Christian Gagné; In <b>3D Computer Vision IEEE Conference</b>, 2015 (acceptance rate for <b>oral</b> 15%). <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b></p>
 
 </div>
 </div>
