--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ layout: default
   at <a href="https://www.ulaval.ca/en/">Universite Laval</a> (UL) researching under supervision of 
   <a href="http://vision.gel.ulaval.ca/~cgagne/">Christian Gagne</a> (the director of <a href="https://iid.ulaval.ca/en/">Insitute Intelligence and Data</a>
   and a <a href="https://mila.quebec/en/">MILA's</a> professor) and <a href="http://vision.gel.ulaval.ca/~laurend/">Denis Laurendeau</a>
-  (the director of <a href="http://vision.gel.ulaval.ca/en/">Computer Vision and System Lab </a>). My current research revolves around dependeble and secure learning models to adversarial examples and Out-of-Distribution samples. Before joining UL, I was a researcher master student at <a href="http://dml.ir/">Digitial Media Lab</a> of <a href="http://www.en.sharif.edu/">Sharif University of Technology</a>(SUT), working on <a href="https://ieeexplore.ieee.org/document/7335521/">3D human pose estimation</a> under supervision <a href="http://sharif.edu/~rabiee/">H. Reza. Rabiee</a>. I obtained my Bachelor of Science in Computer Science from SUT. As my BSc project, I studied and investigated the community detection algorithms for detecting communities of Iranian Mathematicians around the globe.  
+  (the director of <a href="http://vision.gel.ulaval.ca/en/">Computer Vision and System Lab </a>). My current research revolves around dependeble and secure learning models to adversarial examples and Out-of-Distribution samples. Before joining UL, I was a researcher master student at <a href="http://dml.ir/">Digitial Media Lab</a> of <a href="http://www.en.sharif.edu/">Sharif University of Technology</a>(SUT), working on <a href="https://ieeexplore.ieee.org/document/7335521/">3D human pose estimation</a> under supervision of <a href="http://sharif.edu/~rabiee/">H. Reza. Rabiee</a>. I obtained my Bachelor of Science in Computer Science from SUT. As my BSc project, I studied and investigated the community detection algorithms for detecting communities of Iranian Mathematicians around the globe.  
   
         </p>
 <h1 id="my-research-interests">My Research Interests</h1>
@@ -78,9 +78,10 @@ layout: default
 
         <h1> News</h1>
         <ul>
-          <li>[2020/9/12] Two Poster Presentations at <a href="http://montrealaisymposium.com/" target="_blank">Montreal AI Symposium 2020</a>: I) <a href="https://www.youtube.com/watch?v=coLoPTw3Kug" target="_blank">OOD set selection</a>  & II) <a href="https://www.youtube.com/watch?v=hzT55v60ygU" target="_blank">Robust object detector with partially labelled datasets</a> </li>
-          <li> [2020/08/14] Submitted my Ph.D. thesis for evaluation and waiting for the defense session!
-          <li>[2020/8/28] <a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets" target="_blank"> Talk </a> at <a href="http://ecai2020.eu/">ECAI 2020</a> </li>
+          <li>[2020/09/12] Two Poster Presentations at <a href="http://montrealaisymposium.com/" target="_blank">Montreal AI Symposium 2020</a>: I) <a href="https://www.youtube.com/watch?v=coLoPTw3Kug" target="_blank">OOD set selection</a>  & II) <a href="https://www.youtube.com/watch?v=hzT55v60ygU" target="_blank">Robust object detector with partially labelled datasets</a> </li>
+          
+          <li>[2020/08/28] <a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets" target="_blank"> Talk </a> at <a href="http://ecai2020.eu/">ECAI 2020</a> </li>
+<li> [2020/08/14] Submitted my Ph.D. thesis for evaluation and waiting for the defense session!</li>
 
 <li>[2020/05/08]<strong>Best Paper Award</strong> from Canadian AI 2020</li>
 
