--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -54,6 +54,6 @@ layout: default
       can cause false negative signals in the training. In the following, we demonstrate how the missing-label instances cause a drop in performance 
       (i.e. mean average of precision ) of object detectors, particularly YOLO and faster R-CNN. <b>to be continued</b>
       
-      $$x_i+x_j+\exp(-||x_i-x_j||^2)$$
+      \[x_i+x_j+\exp(-||x_i-x_j||^2)\]
     </section>
 
