--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -55,5 +55,8 @@ layout: default
       (i.e. mean average of precision ) of object detectors, particularly YOLO and faster R-CNN. <b>to be continued</b>
       
       \[x_i+x_j+\exp(-||x_i-x_j||^2)\]
+      
+       When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
     </section>
 
