--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -86,7 +86,7 @@ While UPIs do not contribute to the training of YOLO through their "class" and "
  
 
 <h2> How to Overcome This Problem</h2>
-Generally speaking, there are two solutions for this problem arise from UPIs; ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, we not only correct these false negative signals, but also create more training signals by generating pseudo-labels for UPIs. 
+Generally speaking, there are two solutions for this problem arise from UPIs; ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, We not only correct these false-negative signals, which are arisen from the object loss but also create more training signals from the coordinate and class losses through generating some pseudo-labels for the UPIs. 
      
     </section>
 
