--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@ layout: default
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
             <p style="font-size:13.4px; line-height:155%"><strong>Self-supervised Robust Object Detectors from Partially Labelled Datasets</strong></p>
-<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné; Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></b></p>
+<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné; Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code](soon coming)</a></b></p>
 </div>
 </div>
       </li>
@@ -31,7 +31,7 @@ layout: default
 	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 <p style="font-size:13.4px; line-height:155%"><strong>Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</strong></p>
 <p style="font-size:13.4px"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba;
-            <b>Long paper in Canadian Conference on AI</b>, 2020( <a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></b></p>
+            <b>Long paper in Canadian Conference on AI</b>, 2020( <a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code](soon coming)</a></b></p>
 </div>
 </div>
       </li>
@@ -52,7 +52,7 @@ layout: default
 
 <p style="font-size:13.4px; line-height:155%"><strong>Towards metrics for differentiating Out-of-Distribution sets</strong></p>
 
-<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba; In <b>European Conference on AI</b>, 2020 (<b>Oral</b>; acceptance rate 26.8%). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk]</a>
+<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Changjian Shui, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba; In <b>European Conference on AI</b>, 2020 (<b>Oral</b>; acceptance rate 26.8%). <b><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="https://screencast-o-matic.com/watch/cYjhc0Gng3">[Talk]</a>
   <a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></b></p>
 </div>
 </div>
@@ -72,7 +72,7 @@ layout: default
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
 <p style="font-size:13.4px; line-height:155%"><strong>A Principled Approach for Learning Task Similarity in Multitask Learning</strong></p>
-<p style="font-size:13.4px; line-height:155%"> Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In <b>International Joint Conference on Artificial Intelligence </b>, 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></b></p>
+<p style="font-size:13.4px; line-height:155%"> Changjian Shui, Mahdieh Abbasi, Louis-Emile Robitaille, Boyu Wang, Christian Gagné; In <b>International Joint Conference on Artificial Intelligence </b>, 2019 (Poster, acceptance rate 18%). <b><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="https://github.com/mahdaneh/MultiTask-Learning">[Code]</a></b></p>
 
 </div>
 </div>
@@ -98,7 +98,7 @@ layout: default
 <p style="font-size:13.4px; line-height:155%"><strong>Towards Dependable Deep Convolutional Neural Networks (CNNs) with Out-Distribution Learning</strong></p>
 
 <p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagné, Rakesh B. Bobba; In <b>Dependable and Secure Machine Learning (DSML)</b>, co-located with Dependable System Networks (DSN), 2018. 
-<b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a></b></p>
+<b><a href="https://arxiv.org/pdf/1804.08794.pdf">[PDF]</a> <a href="/Posters/DSML Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
 </p>
 
 </div>
@@ -110,31 +110,6 @@ layout: default
 
 
 
-
-
-
-
-
-<p style="margin:-9px 0px 0px 0px;"></p>
-
-<ul class="list-group">
-<li class="list-group-item" style="padding:0 0 0.2% 0.6%;">
-<div class="media">
-
-<div class="pull-left text-center" style="padding:9px 1.3% 0 0; width:20%;" href=""><img width="100%" src="/images/A-CNN.jpg"></div>
-
-<div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
-
-<p style="font-size:13.4px; line-height:155%"><strong>Controlling Over-generalization and its Effect on Adversarial Examples Generation and Detection</strong></p>
-
-<p style="font-size:13.4px; line-height:155%"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Azadeh S. Mozafari, Rakesh B.  Bobba, Christian Gagné; In Arxiv, 2018. <a href="https://arxiv.org/abs/1808.08282">[PDF]</a> <a href="https://github.com/mahdaneh/Out-distribution-learning_FSvisulization">[Code]</a></b></p>
-
-</div>
-</div>
-
-
-</ul>
-</li>
 
 
 
