--- a/publications.html
+++ b/publications.html
@@ -14,7 +14,7 @@ layout: default
 <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 
             <p style="font-size:13.4px; line-height:155%"><strong>Self-supervised Robust Object Detectors from Partially Labelled Datasets</strong></p>
-<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné; Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code](soon coming)</a></b></p>
+<b>Mahdieh Abbasi</b>, Denis Laurendeau, Christian Gagné; Arxiv, 2020, <b><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code](coming soon)</a></b></p>
 </div>
 </div>
       </li>
@@ -31,7 +31,7 @@ layout: default
 	  <div class="pull-left text-left" style="padding:0% 0% 0% 0.1%; width:71%;">
 <p style="font-size:13.4px; line-height:155%"><strong>Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks</strong></p>
 <p style="font-size:13.4px"><b>Mahdieh Abbasi</b>, Arezoo Rajabi, Christian Gagne, Rakesh B. Bobba;
-            <b>Long paper in Canadian Conference on AI</b>, 2020( <a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code](soon coming)</a></b></p>
+            <b>Long paper in Canadian Conference on AI</b>, 2020( <a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <b><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code](coming soon)</a></b></p>
 </div>
 </div>
       </li>
