--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -6,7 +6,7 @@ layout: default
 ---
 
 layout: post
-use_toc: true
+toc: true
 ---
 
 <head>
@@ -78,9 +78,10 @@ use_toc: true
       Moreover, for each grid ${G_{ij}}$, a set of pre-defined bounding-boxes (called anchors) with different aspect ratios and scales is considered. 
         YOLO learns to estimates the bounding-boxes w.r.t these pre-defined anchors.</p>
       
-      
-      <img width="70%" src="/Blogs/img_object_detector/YOLO.jpg">
-
+      <figure>
+      <img width="70%" src="./Blogs/img_object_detector/YOLO.jpg">
+<figcaption>Figure 1: YOLO </figcaption>
+</figure>
 
 
 
