--- a/Blog.html
+++ b/Blog.html
@@ -1,20 +1,23 @@
 ---
-layout: default
+layout: post
 ---
 
 <head>
   <title> Blog Posts</title>
   </head>
+
+  
 <section>
   <h1> Blog Posts</h1>
 
 
 <div class="parent">
 <div class="img2">
-<img  width="200" heigh="200" src="/Blogs/img_object_detector/missing-rate.png" />
+<img  width="200" heigh="200" src="images/img_object_detector/missing-rate.png" />
 </div>
 <div class="text">
-<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset <a href="/Blogs/Object_Detector.html"> <img src="/Blogs/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
+<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset <a href="/Blogs/Object_Detector.html"> 
+  <img src="images/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
 </div>
 </div>
 
@@ -22,10 +25,11 @@ layout: default
 
 <div class="parent">
 <div class="img2">
-<img width="100" heigh="50" src="/Blogs/img_data_privacy/icon_image.jpg" />
+<img width="100" heigh="50" src="images/img_data_privacy/icon_image.jpg" />
 </div>
 <div class="text">
-<b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes <a href="/Blogs/Data_anonymization_privacy.html"> <img src="/Blogs/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
+<b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes 
+<a href="/Blogs/Data_anonymization_privacy.html"> <img src="images/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
 </div>
 </div>
 
