--- a/blogs/Object_Detector.html
+++ b/blogs/Object_Detector.html
@@ -1,7 +1,12 @@
-
+<!-- 
 ---
+layout: default
+---
+-->
+---
+
 layout: post
-use_toc: true
+toc: true
 ---
 
 <head>
@@ -56,7 +61,7 @@ use_toc: true
         (or partially disjoint) sets of Objects of Interest (OoI) for <b>quickly</b> constructing a larger dataset that
         includes a wider range of objects of interest. For instance, <a href="http://www.cvlibs.net/datasets/kitti/">Kitti</a> and <a href="https://bdd-data.berkeley.edu/">BDDK100</a> are
         two different datasets for roads with two disjoint sets of OoIs that could be merged to cover a wider spectrum of variations (light, style, and etc ) and various road objects.
-      <img width="50%" src="../images/img_object_detector/merged.png">Figure 1: Merging several datasets to quickly building a larger dataset with wider range of variations and object of interest.</img></li>
+      <img width="50%" src="img_object_detector/merged.png">Figure 1: Merging several datasets to quickly building a larger dataset with wider range of variations and object of interest.</img></li>
       </ul>
       
       <h2>Notations</h2>
@@ -74,8 +79,8 @@ use_toc: true
         YOLO learns to estimates the bounding-boxes w.r.t these pre-defined anchors.</p>
       
       <figure>
-      <img width="70%" src="../images/img_object_detector/YOLO.jpg">
-<figcaption>Figure 2: YOLO </figcaption>
+      <img width="70%" src="./Blogs/img_object_detector/YOLO.jpg">
+<figcaption>Figure 1: YOLO </figcaption>
 </figure>
 
 
