--- a/Blog.html
+++ b/Blog.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 ---
+<body>
 
 <head>
   <title> Blog Posts</title>
@@ -16,7 +17,8 @@ layout: post
 <img  width="200" heigh="200" src="images/img_object_detector/missing-rate.png" />
 </div>
 <div class="text">
-<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset <a href="/Blogs/Object_Detector.html"> 
+<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset
+ <a href="/Blogs/Object_Detector.html"> 
   <img src="images/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
 </div>
 </div>
@@ -34,3 +36,4 @@ layout: post
 </div>
 
   </section>
+</body>
