--- a/Blog.html
+++ b/Blog.html
@@ -13,7 +13,11 @@ layout: post
 
 
 <div class="parent">
+  <div class='text'>
+    2020-09-10
+  </div>
 <div class="text">
+
 <b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset
  <a href="/Blogs/Object_Detector.html"> 
   <img src="images/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
