--- a/Blog.html
+++ b/Blog.html
@@ -13,23 +13,26 @@ layout: post
 
 
 <div class="parent">
-  <div class='text'>
-    2020-09-10
+  <div class="img">
+    <a href="/Blogs/Object_Detector.html">    2020-09-10
+    </a>
   </div>
 <div class="text">
 
 <b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset
- <a href="/Blogs/Object_Detector.html"> 
-  <img src="images/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
+ 
 </div>
 </div>
 
 
 
 <div class="parent">
+  <div class='img'>
+    <a href="/Blogs/Data_anonymization_privacy.html">2020-09-10</a>
+  </div>
 <div class="text">
 <b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes 
-<a href="/Blogs/Data_anonymization_privacy.html"> <img src="images/arrow_icon.png" style="vertical-align:middle" width="30" heigh="30"/></a>
+
 </div>
 </div>
 
