--- a/Blog.html
+++ b/Blog.html
@@ -11,6 +11,19 @@ layout: post
 <section>
   <h1> Blog Posts</h1>
 
+  <div class="parent">
+    <div class="img">
+      <a href="/Blogs/Our_self_Supervised.html">    2021-02-10
+      </a>
+    </div>
+  <div class="text">
+  
+  <b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset
+   
+  </div>
+  </div>
+
+
 
 <div class="parent">
   <div class="img">
