--- a/Blog.html
+++ b/Blog.html
@@ -13,12 +13,11 @@ layout: post
 
   <div class="parent">
     <div class="img">
-      <a href="/Blogs/Our_self_Supervised.html">    2021-02-10
-      </a>
+      <a href="/Blogs/Our_self_Supervised.html">    2021-02-10</a>
     </div>
   <div class="text">
   
-  <b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset
+  <b/>Our self-supervised method to handel missing-label instances
    
   </div>
   </div>
@@ -27,8 +26,7 @@ layout: post
 
 <div class="parent">
   <div class="img">
-    <a href="/Blogs/Object_Detector.html">    2020-09-10
-    </a>
+    <a href="/Blogs/Object_Detector.html"> 2020-09-10</a>
   </div>
 <div class="text">
 
@@ -41,7 +39,7 @@ layout: post
 
 <div class="parent">
   <div class='img'>
-    <a href="/Blogs/Data_anonymization_privacy.html">2020-09-10</a>
+    <a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a>
   </div>
 <div class="text">
 <b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes 
