--- a/Blog.html
+++ b/Blog.html
@@ -30,7 +30,7 @@ layout: post
   </div>
 <div class="text">
 
-<b/>Performance degradation of a SOTA object detecor trained on a partially-labelled dataset
+<b/>Performance degradation of YOLO!
  
 </div>
 </div>
@@ -42,7 +42,7 @@ layout: post
     <a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a>
   </div>
 <div class="text">
-<b/>Anonymized Synthetic Data Generation for Privacy-preserving purposes 
+<b/> Anonymized Synthetic Data Generation for Privacy-preserving purposes 
 
 </div>
 </div>
