--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -26,4 +26,14 @@ If the proxy model classifies an ROI as its extra class (meaning it contains an 
 <figcaption>Figure 1: Our proposed method incorporates a pre-trained Augmented CNN</figcaption>
 </figure>
 
+
+<h2>
+  Reference
+  </h2>
+  `@article{abbasi2020self,
+    title={Self-supervised Robust Object Detectors from Partially Labelled Datasets},
+    author={Abbasi, Mahdieh and Laurendeau, Denis and Gagn{\'e}, Christian},
+    journal={arXiv preprint arXiv:2005.11549},
+    year={2020}
+  }`
 </section>
