--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -22,7 +22,7 @@ If the proxy model classifies an ROI as its extra class (meaning it contains an 
 
 
 <figure>
-<img width="50%" src="../images/img_object_detector/Ours.png" align="center"> 
+<img width="50%" src="../images/img_object_detector/Ours.png" class="center"> 
 <figcaption>Figure 1: Our proposed method incorporates a pre-trained Augmented CNN</figcaption>
 </figure>
 
