--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -55,14 +55,33 @@ layout: post
         </div>
       </div>
 
+<h3>Three kinds of losses</h3>
+<ul>
+<li><b> Object loss</b> 
+  aims to enforce YOLO to predict existence of an OoI inside a given anchor, i.e. $p(O|\mathbf{r}^a_{G_{ij})$ . 
+</li>
 
+<li>
+  <b> Class loss</b> predicts the category of an object of interest.
+
+  </li>
+  <li>
+    <b>Coordinate loss</b> encourages YOLO to esitmate precisely 
+    the coordinate information of ROIs.
+    </li>
+</ul>
 
       
 
       <h2> How do missing-label instances degrade detection performance?</h2>
       
-<p>While UPIs do not contribute to the training of YOLO through their "class" and "coordinate" losses, they can adversely contribute through their "object" loss. In contrast to class and coordinate losses, the object loss is computed for all anchors of all grids, whether they contain any ground-truths or not. The computation of object loss for UPIs causes false-negative training signals, leading to a degradation of performance. More specifically, during the training of YOLO, the detector may be able to correctly localize a UPI, estimating its corresponding anchor with $p(O)\sim1$. However, since it has no associated ground-truth label, it is given true object label zero, i.e. $t=0$. This false-negative training signal forces the network to learn a UPI as a negative or not-interesting object even though the model can correctly localize and recognize it. Ultimately, such a false negative signal from a UPI can confuse the network since the LPIs (Labelled Positive Instance) of the same object category forces the network to learn it as an object of interest while the UPIs from the same object category encourage the network to learn it as a not-interesting (negative) object.
- Therefore, such false-negative signals can cause a drop in the performance of YOLO.      
+<p>While UPIs do not contribute to the training of YOLO through their class and coordinate losses, they can adversely contribute through their object loss. 
+  In other words, object loss is computed for all anchors of all grids, whether they contain any ground-truths or not. This is not the case for class and coordinate losses.
+   <b>Therefore, computation of object loss for the UPIs creates false-negative training signals, leading to a degradation of performance.</b>
+    More specifically, during training of YOLO, the detector may be able to correctly localize an UPI, estimating its corresponding anchor with $p(O)\sim1$. But, due to the absence of a ground-truth label associated to an UPI, its true object label is considered zero, i.e. $t=0$, by default.
+  Then, such a false-negative training signal forces the network to learn a UPI as a negative or not-interesting object even though the model can correctly localize and recognize it.
+   Ultimately, such a false negative signal from a UPI can confuse the network since the LPIs (Labelled Positive Instance) of the same object category forces the network to learn it as an object of interest while the UPIs from the same object category encourage the network to learn it as a not-interesting (negative) object.
+ Finally, such false-negative signals can cause a drop in the performance of YOLO.      
  </p>
 
 <h2> How to overcome this performance degradation?</h2>
