--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -24,7 +24,7 @@ layout: post
   </script>
   
   </head>
-  
+
     <section>
       <h1>Performance degradation of a SOTA object detector trained on a partially-labeled dataset</h1>
   <h2> Introduction</h2>
@@ -102,9 +102,10 @@ layout: post
 <p>While UPIs do not contribute to the training of YOLO through their class and coordinate losses, they can adversely contribute through their object loss. 
   In other words, object loss is computed for all anchors of all grids, whether they contain any ground-truths or not. This is not the case for class and coordinate losses.
    <b>Therefore, computation of object loss for the UPIs creates false-negative training signals, leading to a degradation of performance.</b>
-    More specifically, during training of YOLO, the detector may be able to correctly localize an UPI, estimating its corresponding anchor with $p(O)\sim1$. But, due to the absence of a ground-truth label associated to an UPI, its true object label is considered zero, i.e. $t=0$, by default.
-  Then, such a false-negative training signal forces the network to learn a UPI as a negative or not-interesting object even though the model can correctly localize and recognize it.
-   Ultimately, such a false negative signal from a UPI can confuse the network since the LPIs (Labelled Positive Instance) of the same object category forces the network to learn it as an object of interest while the UPIs from the same object category encourage the network to learn it as a not-interesting (negative) object.
+    More specifically, during training of YOLO, the detector may be able to correctly localize an UPI, estimating its corresponding anchor with $p(O)\sim1$. But, due to the absence of a ground-truth label associated to an UPI, its true object label is considered zero, i.e. $t=0$, by default, causing YOLO to be penelized incorrectly.
+    Indeed, such a false-negative training signal forces the network to learn an UPI as a negative or not-interesting object even though the model already correctly localize and recognize it.
+
+   Ultimately, such false negative signals from UPIs can confuse the network; while LPIs (Labelled Positive Instance) of the same object category forces the network to learn it as an object of interest, such UPIs (from the same object category) encourage the network to learn it as a not-interesting (negative) object.
  Finally, such false-negative signals can cause a drop in the performance of YOLO.      
  </p>
 
