--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -116,9 +116,11 @@ layout: post
 <p>Generally speaking, there are two solutions for this problem arise from UPIs; 
   ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, we not only correct these false-negative signals, which are arisen from the object loss but also create more training signals from the coordinate and class losses through generating some pseudo-labels for the UPIs. To read a short description of our self-supervised method, click <a href="./Blogs/Our_self_Supervised.html">here </a>.
 </p>
+
 </article>
+<script type="text/javascript"> src="../toc.js"</script>
     </section>
 
-    <script type="text/javascript"> src="toc.js"</script>
+    
     </body>
 
