--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -118,7 +118,7 @@ layout: post
 </p>
 
 </article>
-<script type="text/javascript"> src="../toc.js"</script>
+<script type="text/javascript" src="../toc.js"> </script>
     </section>
 
     
