--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -29,7 +29,7 @@ layout: post
     <section>
 <article>
       
-      <h1>Performance degradation of a SOTA object detector trained on a partially-labeled dataset</h1>
+      <h1>Performance degradation of YOLO for a partially-labeled dataset</h1>
   <h2 id ="s1"> Introduction</h2>
 <p>
   
