--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -86,7 +86,7 @@ layout: post
 <h3 id="s4">Three kinds of losses</h3>
 <ul>
 <li><b> Object loss</b> 
-  aims to enforce YOLO to predict existence of an OoI inside a given anchor, i.e. $p(O|\mathbf{r}^a_{G_{ij})$ . 
+  aims to enforce YOLO to predict existence of an OoI inside a given anchor, i.e. $p(O|\mathbf{r}^a_{G_{ij}})$. 
 </li>
 
 <li>
