--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -27,7 +27,9 @@ layout: post
   
   </head>
 <body>
+  <div id="ToC"></div>
     <section>
+
 <article>
       
       <h1>Performance degradation of YOLO for a partially-labeled dataset</h1>
