--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -27,13 +27,13 @@ layout: post
   
   </head>
 <body>
-  <div id="ToC"></div>
+  
     <section>
 
-<article>
+  <div id="ToC">
       
       <h1>Performance degradation of YOLO for a partially-labeled dataset</h1>
-  <h2 > Introduction</h2>
+  <h2> Introduction</h2>
 <p>
   
   Modern CNN-based object detectors such as faster R-CNN and YOLO achieve remarkable performance when trained 
@@ -120,7 +120,7 @@ layout: post
   ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, we not only correct these false-negative signals, which are arisen from the object loss but also create more training signals from the coordinate and class losses through generating some pseudo-labels for the UPIs. To read a short description of our self-supervised method, click <a href="./Blogs/Our_self_Supervised.html">here </a>.
 </p>
 
-</article>
+  </div>
 
     </section>
 
