--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -1,6 +1,5 @@
 ---
-layout: post
-toc: true
+layout: default
 ---
 
 <head>
@@ -28,10 +27,10 @@ toc: true
   
   </head>
 <body>
-  
-    <section>
+  addTOC($get("#content"))
+    <section id ="content">
 
-  
+      
       
       <h1>Performance degradation of YOLO for a partially-labeled dataset</h1>
   <h2> Introduction</h2>
