--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -27,12 +27,19 @@ layout: default
   
   </head>
 <body>
-  addTOC($get("#content"))
-    <section id ="content">
+  
+    <section>
 
-      
+      <div id='console'></div>
+      <div id="toc">
+          <h3>Table of Contents</h3>
+      </div>
+      <hr/>
       
       <h1>Performance degradation of YOLO for a partially-labeled dataset</h1>
+
+
+      <div id="contents">    
   <h2> Introduction</h2>
 <p>
   
@@ -120,7 +127,7 @@ layout: default
   ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, we not only correct these false-negative signals, which are arisen from the object loss but also create more training signals from the coordinate and class losses through generating some pseudo-labels for the UPIs. To read a short description of our self-supervised method, click <a href="./Blogs/Our_self_Supervised.html">here </a>.
 </p>
 
-  
+      </div>
 
     </section>
 
