--- a/publications.html
+++ b/publications.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <body>
-
+<section>
   <div class="container">
 
 <ul class="list-group">
@@ -189,5 +189,6 @@ layout: default
 
 
 </div>
+</section>
 
 </body>
