--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -1,6 +1,3 @@
----
-layout: post
----
 
 <head>
   <!--<script type="text/x-mathjax-config">
@@ -25,9 +22,23 @@ layout: post
   
   
   </head>
+
+
 <body>
+
+<div class="wrapper">
+<header>
+  <h2> Table of Content </h2>
+  <h3> <a href="#s1"> Introduction </a></h3>
+  <h3> <a href="#s2"> Scenarios leading to missing-label instance </a></h3>
+  <h3> <a href="#s3"> Notations </a></h3>
+  <h3> <a href="#s4"> YOLO's losses </a></h3>
+  <h3> <a href="#s5"> YOLO's performance declination by missing labels </a></h3>
+  <h3> <a href="#s6"> Overcome performance degradation </a></h3>
+</header>
+
     <section>
-<article>
+
       
       <h1>Performance degradation of a SOTA object detector trained on a partially-labeled dataset</h1>
   <h2 id ="s1"> Introduction</h2>
@@ -112,13 +123,12 @@ layout: post
  Finally, such false-negative signals can cause a drop in the performance of YOLO.      
  </p>
 
-<h2 id="s6"> How to overcome this performance degradation?</h2>
+<h2 id="s6"> How to overcome such a performance degradation?</h2>
 <p>Generally speaking, there are two solutions for this problem arise from UPIs; 
   ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, we not only correct these false-negative signals, which are arisen from the object loss but also create more training signals from the coordinate and class losses through generating some pseudo-labels for the UPIs. To read a short description of our self-supervised method, click <a href="./Blogs/Our_self_Supervised.html">here </a>.
 </p>
-</article>
-    </section>
 
-    <script type="text/javascript"> src="toc.js"</script>
+    </section>
+  </div>
     </body>
 
