--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -1,10 +1,4 @@
-<<<<<<< HEAD
-=======
----
-layout: default
----
->>>>>>> 84aa09b96ff3802cc99cc7fd4d000cec75d530e1
-
+<html>
 <head>
   <!--<script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
@@ -25,9 +19,7 @@ layout: default
   <script type="text/javascript"
           src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
   </script>
-  
-  
-  
+
   </head>
 
 
@@ -129,23 +121,15 @@ layout: default
  Finally, such false-negative signals can cause a drop in the performance of YOLO.      
  </p>
 
-<<<<<<< HEAD
 <h2 id="s6"> How to overcome such a performance degradation?</h2>
-=======
-<h2> How to overcome this performance degradation?</h2>
->>>>>>> 84aa09b96ff3802cc99cc7fd4d000cec75d530e1
 <p>Generally speaking, there are two solutions for this problem arise from UPIs; 
   ignore the false negative signals (<a href="https://arxiv.org/abs/1806.06986">Wu et. al. </a>) or correct them. In our <a href="https://arxiv.org/abs/2005.11549"> article </a>, we not only correct these false-negative signals, which are arisen from the object loss but also create more training signals from the coordinate and class losses through generating some pseudo-labels for the UPIs. To read a short description of our self-supervised method, click <a href="./Blogs/Our_self_Supervised.html">here </a>.
 </p>
 
-<<<<<<< HEAD
     </section>
   </div>
-=======
-      
-
-    </section>
->>>>>>> 84aa09b96ff3802cc99cc7fd4d000cec75d530e1
     </body>
+
+    </html>
     
 
