--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -1,7 +1,17 @@
----
-layout: default
----
+<html>
 
+<body>
+  <div class="wrapper">
+    
+    <header>
+      <h2> Table of Content </h2>
+      <h3> <a href="#s1"> Introduction </a></h3>
+      <h3> <a href="#s2"> Scenarios leading to missing-label instance </a></h3>
+      <h3> <a href="#s3"> Notations </a></h3>
+      <h3> <a href="#s4"> YOLO's losses </a></h3>
+      <h3> <a href="#s5"> YOLO's performance declination by missing labels </a></h3>
+      <h3> <a href="#s6"> Overcome performance degradation </a></h3>
+    </header>
 <section>
 
 <h1>Self-supervised framework for generating pseudo-labels</h1>
@@ -29,3 +39,6 @@ If the proxy model classifies an ROI as its extra class (meaning it contains a n
 More details can be found in our <a href="https://arxiv.org/abs/2005.11549"> Arxiv paper</a>.
 
 </section>
+</div>
+</body>
+</html>
