--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -1,8 +1,8 @@
 <html>
-
+<head></head>
 <body>
   <div class="wrapper">
-    
+
     <header>
       <h2> Table of Content </h2>
       <h3> <a href="#s1"> Introduction </a></h3>
@@ -15,6 +15,8 @@
 <section>
 
 <h1>Self-supervised framework for generating pseudo-labels</h1>
+
+<h2 id ="s1">Introduction</h2>
 
 <p> <a href='./Blogs/Object_Detector.html'>In previous blog post</a>, 
   we explained how missing-label instances or UPIs (Unlabelled Positive Instances) can create 
