--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -57,10 +57,12 @@ If the proxy model classifies an ROI as its extra class (meaning it contains a n
 
 <figure>
 <img width="50%" src="../images/img_object_detector/Ours.png" class="center"> 
-<figcaption>Figure 1: Our proposed method incorporates a pre-trained Augmented CNN</figcaption>
+<figcaption>Figure 1: Our proposed method incorporates a pre-trained Augmented CNN to generate pseudo-labels on-the-fly in an end-to-end fashion.</figcaption>
 </figure>
 
 More details can be found in our <a href="https://arxiv.org/abs/2005.11549"> Arxiv paper</a>.
+
+<h2 id="s2"> A-CNN</h2>
 
 </section>
 </div>
