--- a/Blog.html
+++ b/Blog.html
@@ -11,11 +11,11 @@ layout: default
 <section>
   <h1> Blog Posts</h1>
 
-  <div class="parent">
-    <div class="img">
+  <div >
+    <div >
       <a href="/Blogs/Our_self_Supervised.html">    2021-02-10</a>
     </div>
-  <div class="text">
+  <div >
   
   <b/>Our self-supervised method to handel missing-label instances
    
@@ -24,12 +24,10 @@ layout: default
 
 
 
-<div class="parent">
-  <div class="img">
-    <a href="/Blogs/Object_Detector.html"> 2020-09-10</a>
+<div >
+  <div > href="/Blogs/Object_Detector.html"> 2020-09-10</a>
   </div>
-<div class="text">
-
+<div >
 <b/>Performance degradation of YOLO!
  
 </div>
@@ -37,11 +35,11 @@ layout: default
 
 
 
-<div class="parent">
-  <div class='img'>
+<div>
+  <div >
     <a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a>
   </div>
-<div class="text">
+<div >
 <b/> Anonymized Synthetic Data Generation for Privacy-preserving purposes 
 
 </div>
