--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
 
         <h2> News</h2>
         <ul>
-        <li><b>[2020/12/08]</b> Successfully defended my Ph.D. thesis titled "Toward robust deep learning models". The evaluation committee includes <a href="https://www.papernot.fr/"> Dr. Nicolas Papernot </a>, <a href='http://vision.gel.ulaval.ca/~jflalonde/'>Dr. Jean-Fran&ccediloise Lalonde </a>, and <a href="http://www2.ift.ulaval.ca/~chaib/">Prof. Brahim Chaib-draa</a>. </li>
+        <li><span color="green">[2020/12/08]</span> Successfully defended my Ph.D. thesis titled "Toward robust deep learning models". The evaluation committee includes <a href="https://www.papernot.fr/"> Dr. Nicolas Papernot </a>, <a href='http://vision.gel.ulaval.ca/~jflalonde/'>Dr. Jean-Fran&ccediloise Lalonde </a>, and <a href="http://www2.ift.ulaval.ca/~chaib/">Prof. Brahim Chaib-draa</a>. </li>
           <li><b>[2020/09/12]</b> Two Poster Presentations at <a href="http://montrealaisymposium.com/" target="_blank">Montreal AI Symposium 2020</a>: I) <a href="https://www.youtube.com/watch?v=coLoPTw3Kug" target="_blank">OOD set selection</a>  & II) <a href="https://www.youtube.com/watch?v=hzT55v60ygU" target="_blank">Robust object detector with partially labelled datasets</a> </li>
           
           <li>[<b>2020/08/28]</b> <a href="https://underline.io/events/24/sessions/206/lecture/2014-toward-metrics-for-differentiating-out-of-distribution-sets" target="_blank"> Talk </a> at <a href="http://ecai2020.eu/">ECAI 2020</a> </li>
