--- a/Blog.html
+++ b/Blog.html
@@ -11,39 +11,29 @@ layout: default
 <section>
   <h1> Blog Posts</h1>
 
-  <div >
-    <div >
-      <a href="/Blogs/Our_self_Supervised.html">    2021-02-10</a>
-    </div>
-  <div >
+  <table style="width:100%">
+    <tr>
+     <td> <a href="/Blogs/Our_self_Supervised.html">  2021-02-10</a></td>
+     <td><b/>Our self-supervised method to handel missing-label instances</td>
+    
+    </tr>
+    
+    <tr>
+      <td><a href="/Blogs/Object_Detector.html"> 2020-09-10</a></td>
+      <td><b/>Performance degradation of YOLO!</td>
+    </tr>
+
   
-  <b/>Our self-supervised method to handel missing-label instances
-   
-  </div>
-  </div>
 
 
 
-<div >
-  <div > href="/Blogs/Object_Detector.html"> 2020-09-10</a>
-  </div>
-<div >
-<b/>Performance degradation of YOLO!
- 
-</div>
-</div>
+<tr>
+  <td><a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a></td>
+    <td><b/> Anonymized Synthetic Data Generation for Privacy-preserving purposes </td>
+</tr>
 
+</table>
 
-
-<div>
-  <div >
-    <a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a>
-  </div>
-<div >
-<b/> Anonymized Synthetic Data Generation for Privacy-preserving purposes 
-
-</div>
-</div>
 
   </section>
 </body>
