--- a/Blog.html
+++ b/Blog.html
@@ -14,14 +14,14 @@ layout: default
   <table style="width:100%">
     <tr>
      <td> <a href="/Blogs/Our_self_Supervised.html">  2021-02-10</a></td>
-     <td>#ML/computer vision </td>
+     <td><span class="hashtag">#ML/computer vision</span> </td>
      <td><b/>Our self-supervised method to handel missing-label instances</td>
     
     </tr>
     
     <tr>
       <td><a href="/Blogs/Object_Detector.html"> 2020-09-10</a></td>
-      <td>#ML/computer vision </td>
+      <td><span class="hashtag">#ML/computer vision</span> </td>
       <td><b/>Performance degradation of YOLO!</td>
     </tr>
 
@@ -31,7 +31,7 @@ layout: default
 
 <tr>
   <td><a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a></td>
-  <td> #ML/Privacy </td>
+  <td><span class="hashtag">#ML/Privacy</span> </td>
     <td><b/> Anonymized Synthetic Data Generation for Privacy-preserving purposes </td>
 </tr>
 
