--- a/Blog.html
+++ b/Blog.html
@@ -13,16 +13,16 @@ layout: default
 
   <table style="width:100%">
     <tr>
-     <td> <a href="/Blogs/Our_self_Supervised.html">  2021-02-10</a></td>
-     <td><span class="hashtag">#ML/computer vision</span> </td>
-     <td><b/>Our self-supervised method to handel missing-label instances</td>
+     <td>  2021-02-10</td>
+     <td class="hashtag">#ML/computer vision </td>
+     <td><a href="/Blogs/Our_self_Supervised.html"> Our self-supervised method to handel missing-label instances</a></td>
     
     </tr>
     
     <tr>
-      <td><a href="/Blogs/Object_Detector.html"> 2020-09-10</a></td>
-      <td><span class="hashtag">#ML/computer vision</span> </td>
-      <td><b/>Performance degradation of YOLO!</td>
+      <td>2020-09-10</td>
+      <td class="hashtag">#ML/computer vision </td>
+      <td><a href="/Blogs/Object_Detector.html"> Performance degradation of YOLO!</a></td>
     </tr>
 
   
@@ -30,9 +30,9 @@ layout: default
 
 
 <tr>
-  <td><a href="/Blogs/Data_anonymization_privacy.html">2020-08-10</a></td>
-  <td><span class="hashtag">#ML/Privacy</span> </td>
-    <td><b/> Anonymized Synthetic Data Generation for Privacy-preserving purposes </td>
+  <td>2020-08-10</td>
+  <td class="hashtag">#ML/Privacy  </td>
+    <td><a href="/Blogs/Data_anonymization_privacy.html"> Anonymized Synthetic Data Generation for Privacy-preserving purposes</a> </td>
 </tr>
 
 </table>
