--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -23,6 +23,8 @@
       <ul >
       
       <li><h3> <a href="#s1"> 1. Introduction </a></h3></li>
+        <li><h3> <a href="#s2"> 2. Our framework in nutshell </a></h3></li>
+        <li><h3> <a href="#s1"> 2.1. Tricks </a></h3></li>
       
     </ul>
     <a href="../index.html"> 
@@ -38,7 +40,7 @@
 
 <h1>Self-supervised framework for generating pseudo-labels</h1>
 
-<h2 id ="s1">Introduction</h2>
+<h2 id ="s1">1. Introduction</h2>
 
 <p> <a href='./Blogs/Object_Detector.html'>In previous blog post</a>, 
   we explained how missing-label instances or UPIs (Unlabelled Positive Instances) can create 
@@ -60,9 +62,32 @@ If the proxy model classifies an ROI as its extra class (meaning it contains a n
 <figcaption>Figure 1: Our proposed method incorporates a pre-trained Augmented CNN to generate pseudo-labels on-the-fly in an end-to-end fashion.</figcaption>
 </figure>
 
-More details can be found in our <a href="https://arxiv.org/abs/2005.11549"> Arxiv paper</a>.
+  <h2 id="s2"> 2. Our framework in nutshell</h2>
+In this post, we briefly explain the stages of our proposed framework. Please refer to our <a href="https://arxiv.org/abs/2005.11549"> Arxiv paper</a> to read about more details.
 
-<h2 id="s2"> A-CNN</h2>
+<ul>
+  <li><strong/>Stage 1: In training phase at a given epoch, YOLO outputs some estimated ROIs. They either contains an OOI or not. Then, we extract these ROIs from the given image. </li>
+  <li><strong/>Stage 2: The extracted ROIs are fed to an pre-trained A-CNN,
+    so that it predicts whether the ROIs contain an OOI through either classifying them as one of it pre-defined categories or reject them (equivalent to classifying a ROI to its extra class).
+  The ROIs classified as one of pre-defined categories (corresponding to the categories of objects of interest) are forwarded to the next stage.</li>
+
+  <li><strong/>Stage 3: If an ROI <b>classified confidently</b> as one of the categories of interest, then a new pseudo-label is created, included coordinate info of the ROI, objectness score, and category.
+    Two latter values are the maximum predictive confidence and its corresponding class estimated by A-CNN for given ROI. </li>
+  <li><strong/> Stage 4: the generated pseudo-labels and ground truth are used for training YOLO.</li>
+
+</ul>
+  <h2 id="s3"> 2.1. Tricks </h2>
+  There are some tricks related to A-CNN to get the above framework working.
+
+  <h3> Extracted ROIs with different sizes</h3>
+  Originally, the CNNs that have some FC layers can not process inputs with different sizes since the FC layers in the architecture can accept only the inputs having identical size. However, feeding the convolution layers
+  with different sizes will incur outputs with different sizes, which are indeed the input for the successive FC layer in such an architecture. To address this issue, <a href="https://arxiv.org/abs/1406.4729">SPP (Spatial Pyramid Pooling)</a> layer is proposed.
+  Using SPP, we then able to process ROIs with different sizes. However, from technical view point (pytorch), we can not have a batch of inputs with different sizes.
+  To circumvent this challenge, we used the k-means trick. In this trick, the input samples with different sizes are clustered so that the samples with similar sizes are placed
+  in a cluster. Then, the samples of a cluster are padded so that they all have identical size. Note that simply using naive padding, i.e. padding images to all have size of the largest image, is not recommended since it can create inputs with immense zero-margin, especially for tiny images.
+  <h3>Generate pseudo-labels only for confident predictions</h3>
+  To create high confidence prediction, we used patch-drop to creat different versions of an ROI, then averaging predictions of A-CNN on all these version can lead to better
+  (in terms of calibration) prediction. Later, we only accept the predictions that are large enough (larger than a threshold). Therefore, the chance of misclassification can be reduced to avoid generate incorrect pseudo-labels.
 
 </section>
 </div>
