--- a/Blogs/Our_self_Supervised.html
+++ b/Blogs/Our_self_Supervised.html
@@ -24,7 +24,7 @@
       
       <li><h3> <a href="#s1"> 1. Introduction </a></h3></li>
         <li><h3> <a href="#s2"> 2. Our framework in nutshell </a></h3></li>
-        <li><h3> <a href="#s1"> 2.1. Tricks </a></h3></li>
+        <ul><li><h3> <a href="#s1"> 2.1. Tricks </a></h3></li></ul>
       
     </ul>
     <a href="../index.html"> 
