--- a/Blog.html
+++ b/Blog.html
@@ -20,7 +20,7 @@ layout: default
     </tr>
     
     <tr>
-      <t class='time'>2020-09-10</td>
+      <td class='time'>2020-09-10</td>
       <td class="hashtag">#ML/computer vision </td>
       <td><a href="/Blogs/Object_Detector.html"> Performance degradation of YOLO!</a></td>
     </tr>
