--- a/Blog.html
+++ b/Blog.html
@@ -15,7 +15,7 @@ layout: default
     <tr>
      <td class='time'>2021-02-10</td>
      <td class="hashtag">#ML/computer vision </td>
-     <td><a href="/Blogs/Our_self_Supervised.html"> Our self-supervised method to handel missing-label instances</a></td>
+     <td><a href="/Blogs/Our_self_Supervised.html"> Our self-supervised method to handle missing-label instances</a></td>
     
     </tr>
     
