--- a/Blog.html
+++ b/Blog.html
@@ -12,22 +12,30 @@ layout: default
   <h1> Blog Posts</h1>
 
   <table style="width:100%">
+  <tr>
+
+     <td class="hashtag">#image processing </td>
+     <td><a href="/Blogs/image_blur.html"> Image blurring in frequency domain</a></td>
+
+    </tr>
+
+
     <tr>
-     <td class='time'>2021-02-10</td>
+
      <td class="hashtag">#ML/computer vision </td>
      <td><a href="/Blogs/Our_self_Supervised.html"> Our self-supervised method to handle missing-label instances</a></td>
     
     </tr>
     
     <tr>
-      <td class='time'>2020-09-10</td>
+
       <td class="hashtag">#ML/computer vision </td>
       <td><a href="/Blogs/Object_Detector.html"> Performance degradation of YOLO!</a></td>
     </tr>
 
 
 <tr>
-  <td class='time'>2020-08-10</td>
+
   <td class="hashtag">#ML/Privacy  </td>
     <td><a href="/Blogs/Data_anonymization_privacy.html"> Anonymized Synthetic Data Generation for Privacy-preserving purposes</a> </td>
 </tr>
