--- a/Blogs/image_blur.html
+++ b/Blogs/image_blur.html
@@ -100,7 +100,7 @@ A blurred image can be achieved by obscuring the high frequencies in the frequen
     the image blurring can simply be done by one simple multiplication; multiplying the input image with a defined low-pass filter in frequency domain.
 </p>
         <div>
-            <h3 id="s3">2.1. Code snippet image blurring</h3>
+            <h3 id="s3">2.1. Code snippet for image blurring</h3>
 <pre><code class="python">import numpy as np
 from numpy import fft
 def Gaussian_filter(shape, kernel_width, Low=True ):
